# zombie-survival-game

./: README.md
code/: resources.qrc
code/include/: bullet.h  collisionmanager.h  entityfactory.h  gamecontroller.h  gameview.h  levelmanager.h  mainwindow.h  player.h  powerup.h  scoreboard.h  zombie.h
code/src/: bullet.cpp  collisionmanager.cpp  entityfactory.cpp  gamecontroller.cpp  gameview.cpp  levelmanager.cpp  mainwindow.cpp  mainwindow.ui
tests/: CMakeLists.txt  HOW_TO_RUN_TESTS.md  PlayerTest.cpp  README.md  ScoreBoardTest.cpp  TESTING_REPORT.md
